--- a/FileAssociations/FileAssociations.csproj
+++ b/FileAssociations/FileAssociations.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
 
 </Project>
