Windows was recreating UserChoice too often, so instead of deleting those keys, forced them to have correct value using SetUserFTA.exe by Christoph Kolbicz (https://kolbi.cz/blog/2017/10/25/setuserfta-userchoice-hash-defeated-set-file-type-associations-per-user/). Extracts EXE and arguments file to temp directory, runs them, and then deletes them.

--- a/FileAssociations/FileAssociations.csproj
+++ b/FileAssociations/FileAssociations.csproj
@@ -13,6 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SetUserFTA.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="SetUserFTA.exe" LogicalName="SetUserFTA.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
